# molecule-vmware

./: LICENSE  README.md  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: molecule-vmware-ci.yml
molecule_vmware/: driver.py
molecule_vmware/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: INSTALL.rst  create.yml  create_linux_instance.yml  create_windows_instance.yml  destroy.yml  molecule.yml
molecule_vmware/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/handlers/: main.yml
molecule_vmware/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/tasks/: create_linux_instance.yml  create_windows_instance.yml
