[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-vmware
url = https://github.com/ansible-community/molecule-vmware
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-vmware/issues
    Source Code = https://github.com/ansible-community/molecule-vmware
description = Molecule VMware Plugin :: run molecule tests on VMware
long_description = file: README.md
long_description_content_type = text/markdown
author = sky-joker
author_email = sky.jokerxx@gmail.com
maintainer = sky-joker
maintainer_email = sky.jokerxx@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    vmware

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.2.0
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    vmware = molecule_vmware.driver:VMware

[options.packages.find]
where = .
